# AlphaGenome_PyTorch

./: .gitignore  HelpfulCommands.txt  README.md  pyproject.toml
alphagenome_pytorch/: __init__.py  bundles.py  embeddings.py  encoder.py  heads.py  losses.py  model.py  pair_update.py  sequence_encoder.py  transformer.py  utils.py
docs/environment/: README.md  make_env.sh
docs/examples/: README.md  train_downstream.py  train_downstream_from_hf_checkpoint.py  train_downstream_from_pretrained_mlm.py  train_mlm.py  utils.py
docs/guides/: data.md  model.md
src/alphagenome_pt/: __init__.py  attention.py  bundles.py  checkpoint.py  convolutions.py  decoder.py  distributed.py  embeddings.py  encoder.py  heads.py  layers.py  losses.py  metadata.py  model.py  output.py  pair_update.py  schemas.py  splicing.py  synthetic.py  transformer.py  utils.py
src/alphagenome_pt/cli/: __init__.py  download.py
src/alphagenome_pt/jax2pt/: README.md  __init__.py  convert_metadata.py  convert_state.py  hf_upload.py  inspect_metadata_public.py  inspect_state_jax.py  inspect_state_torch.py  load.py  mapping_metadata.py  mapping_state.py  utils.py
tests/: README.md  helpers.py  test_bn_grad.py  test_checkpoint_download.py  test_head_enabled_flag.py  test_hyperparameters.py  test_mapping_metadata.py  test_mapping_state.py  test_model_forward.py  test_sync_bn.py  test_task_contact_maps.py  test_task_genome_tracks.py  test_task_masked_language_modeling.py  test_task_splice_junctions.py  test_task_splice_site_usage.py  test_task_splice_sites.py  test_task_splice_sites_classification.py  test_task_splice_sites_junction.py  test_task_splice_sites_usage.py
tools/jax2pt/: README.md  convert_checkpoint.py  hf_upload.py  inspect_jax.py  inspect_torch.py  mapping.py  test_mappings.py  utils.py
