[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "alphagenome_pt"
version = "0.2.0"
authors = [
  { name="Rylie Weaver", email="rylieweaver9@gmail.com" },
  { name="John Lagergren", email="lagergrenjh@ornl.gov" }
]
dependencies = [
  "torch>=2.0",
  "numpy>=1.22",
  "einops>=0.6",
  "einx>=0.3",
  "huggingface_hub>=0.20",
]
description = "An implementation of AlphaGenome in PyTorch."
keywords = [
  "alphagenome",
  "pytorch",
  "deep-learning",
  "genomics",
  "dna",
  "transformer",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]
jax2pt = [
  "alphagenome",
  "jax",
  "dm-haiku",
]

[project.scripts]
alphagenome-pt-convert-jax = "alphagenome_pt.jax2pt.convert_state:main"
alphagenome-pt-export-metadata = "alphagenome_pt.jax2pt.convert_metadata:main"
alphagenome-pt-upload-hf = "alphagenome_pt.jax2pt.hf_upload:main"
alphagenome-pt-inspect-jax = "alphagenome_pt.jax2pt.inspect_state_jax:main"
alphagenome-pt-inspect-metadata = "alphagenome_pt.jax2pt.inspect_metadata_public:main"
alphagenome-pt-inspect-metadata-table = "alphagenome_pt.jax2pt.inspect_metadata_table:main"
alphagenome-pt-inspect-torch = "alphagenome_pt.jax2pt.inspect_state_torch:main"

[project.urls]
Homepage = "https://github.com/RylieWeaver/AlphaGenome_PyTorch"
Issues = "https://github.com/RylieWeaver/AlphaGenome_PyTorch/issues"
